# pydpf-post

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  codecov.yml  conftest.py  index.html  pyproject.toml  requirements_build.txt  requirements_docs.txt  requirements_style.txt  requirements_test.txt  robots.txt  run_client.bat  setup.py  sitemap.xml  versions.json
.ci/: azure-pipelines.yml  build_doc.bat  run_examples.py
.ci/templates/: kill-servers-linux.yml  prepare-environment-linux.yml  prepare-environment-windows.yml
.github/: dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug.yml  examples.yml
.github/build-and-test/: action.yml
.github/build_doc/: action.yml
.github/build_package/: action.yml
.github/test_package/: action.yml
.github/upload_package/: action.yml
.github/workflows/: ansys_lab.yml  build_and_test.yml  ci-build.yml  ci.yml  ci_release.yml  docs-style.yml  docs.yml  examples.yml  release.yml  releaser.yml  style.yml  test_windows.yml
dev/: .buildinfo  404.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pydpf-post_clone_install.html  search.html  searchindex.js
dev/api/: ansys.dpf.html  ansys.dpf.post.common.html  ansys.dpf.post.displacement.html  ansys.dpf.post.dpf_path.html  ansys.dpf.post.dpf_solution.html  ansys.dpf.post.electric_results.html  ansys.dpf.post.errors.html  ansys.dpf.post.examples.html  ansys.dpf.post.harmonic_analysis.html  ansys.dpf.post.html  ansys.dpf.post.misc.html  ansys.dpf.post.misc_results.html  ansys.dpf.post.modal_analysis.html  ansys.dpf.post.post_utility.html  ansys.dpf.post.result_data.html  ansys.dpf.post.result_definition.html  ansys.dpf.post.result_evaluation.html  ansys.dpf.post.result_object.html  ansys.dpf.post.scalar.html  ansys.dpf.post.static_analysis.html  ansys.dpf.post.strain.html  ansys.dpf.post.stress.html  ansys.dpf.post.temperature.html  ansys.dpf.post.tensor.html  ansys.dpf.post.transient_analysis.html  ansys.dpf.post.vector.html  ansys.html  index.html  modules.html  result_data.html  result_object.html  solution.html
dev/examples/: index.html
dev/getting_started/: compatibility.html  index.html  install.html
dev/user_guide/: accessing_file_metadata.html  accessing_results.html  extending_to_core.html  index.html  plotting.html  post_processing.html  troubleshooting.html
doc/: .vale.ini
doc/source/: conf.py  contributing.rst  index.rst
doc/styles/: .gitignore
docs/: .vale.ini  Makefile  make.bat
docs/source/: conf.py  contributing.rst  index.rst  index.rst.orig  pydpf-post_clone_install.rst  user_guide.rst
examples/: 00-dataframe-manipulation.ipynb  00-explore-fluid-simulation.ipynb  00-overview_example.ipynb  01-cyclic-results.ipynb  01-get_data_from_static_simulation.ipynb  01-introduction.ipynb  01-mesh-external-layer.ipynb  01-named-selections-modal-simulation.ipynb  01-static-simulation.ipynb  01-static-simulation.py  02-mesh-skin.ipynb  02-modal-extract-sub-results.ipynb  02-multi-stage-cyclic-results.ipynb  02-named-selections-modal-simulation.py  02-static-analysis.ipynb  03-cyclic-mesh-external-layer.ipynb  03-explore-result-data-harmonic.ipynb  03-modal-analysis.ipynb  03-transient-simulation.py  04-cyclic-mesh-skin.ipynb  04-harmonic-analysis.ipynb  04-harmonic-complex-results.ipynb  04-invariants.ipynb  05-export_data.ipynb  05-mesh-exploration.ipynb  05-modal_cyclic_no_expansion.ipynb  06-complex_results.ipynb  06-compute-min-max.ipynb  07-modal-extract-sub-results.py  07-result_keywords.ipynb  08-result_on_path_of_coordinates.ipynb  09-basics.ipynb  10-harmonic-complex-results.py  README.txt  dataframe_api.py  from_post_to_core.ipynb  index.py  series.py  tuto_post_basics_about_results.ipynb  tuto_post_complex_result.ipynb  (+4 more)
release/: versions.json
requirements/: requirements_build.txt  requirements_ci.txt  requirements_dev.txt  requirements_docs.txt  requirements_style.txt  requirements_test.txt
temp/: DPFDataframe.md  example.py  harmonic_analysis.md  harmonic_analysis.py  meeting.md  modal_analysis.md  modal_analysis.py  static_analysis.md  static_analysis.py  transient_analysis.py
tests/: conftest.py  test_basics.py  test_common.py  test_connectivity.py  test_data.py  test_data_object.py  test_dataframe.py  test_dpfcomplexsolution.py  test_dpfresultwithkeywords.py  test_dpfsolution.py  test_electricanalysis.py  test_elements.py  test_faces.py  test_fluid_simulation.py  test_index.py  test_load_simulation.py  test_mesh.py  test_mesh_info.py  test_meshes.py  test_named_selection.py  test_nodes.py  test_phase.py  test_postbasics.py  test_postcommon.py  test_postdpfcomplexresult.py  test_postdpfcomplexsolution.py  test_postdpfresult.py  test_postdpfresultwithkeywords.py  test_postdpfsolution.py  test_postresultdata.py  test_postresultdefinition.py  test_postresultobject.py  test_resultdata.py  test_resultobject.py  test_selection.py  test_simulation.py  test_species.py  test_streamlines.py  test_thermalanalysis.py
version/: index.html
(+4763 files in other folders)
