[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-dpf-post"
version = "0.4.1.dev0"
description = "PyDPF-Post Python library."
readme = "README.md"
requires-python = ">=3.7.*,<4.0"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
dependencies = [
    "ansys-dpf-core @ git+https://git@github.com/ansys/pydpf-core.git",
    "scooby",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[tool.flit.module]
name = "ansys.dpf.post"

[project.urls]
Source = "https://github.com/ansys/pydpf-post"

[project.optional-dependencies]
plotting = [
    'pyvista[jupyter, trame]>=0.24.0, <0.41.0; python_version>"3.7"',
    'pyvista>=0.24.0, <0.38.5; python_version<"3.8"',
]

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra --cov=ansys.dpf.post --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term -vv"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::FutureWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::DeprecationWarning",
]
